docs: sync all documentation with actual project state
- design-decisions.md: fill all 'pending' entries with actual decisions
- meetings/2026-02-25-kickoff.md: mark all tasks complete, update status
- agent-workflow.md: rewrite to reflect parallel agent meetings + real examples
- component-guide.md: add Activity Graph + Contribution Snake sections
- README.md: fix accent color #00b4d8 -> #58a6ff, fix git.io links
- CONTRIBUTING.md: fix clone URL (njueeray -> OpenProfile)
- .gitignore: exclude local reference docs

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 Thumbs.db
 *.log
 .vscode/extensions.json
+
+# 本地参考文档（不属于 OpenProfile 项目）
+claude-code-handbook.md
+ClaudeCode*.md
+GitHub-Copilot-*.md
