docs(playbook): add 12 onboarding protocol + 13 team self-evolution
Two new sections based on user's enterprise-level team management model:

12 New Team Onboarding Protocol (4 phases):
- Phase 1: Silent Reading  each agent reads independently by role focus
- Phase 2: Alignment Meeting  Brain-led, fixed agenda, full team
- Phase 3: Project Assessment Report  structured output to user
- Phase 4: Team Adaptation Decision  triggers 13 if needed
- Includes: per-role reading checklist, private notes template,
  meeting minutes template, status report template

13 Team Self-Evolution:
- Brain as team architect: recruit / modify / retire agents autonomously
- Brain as sole owner of copilot-instructions.md:
  3 fixed operation triggers (onboarding / iteration close / team change)
- New agent file minimum structure spec
- Agent modification steps with escalation gate
- Evolution Log table format (date / type / role / summary / reason)

copilot-instructions.md:
- Added 3 new Brain autonomous actions (recruit, modify, own file)
- Added 'must notify user' item for capability reduction
- Added Team Evolution Log section with V2.0 history backfilled

--- a/.vscode/toolsets.jsonc
+++ b/.vscode/toolsets.jsonc
@@ -3,7 +3,7 @@
   // 参考：https://code.visualstudio.com/docs/copilot/agents/agent-tools#_tool-sets
 
   "readonly": {
-    // 只读工具集：用于调研和审查类 Agent（researcher、qa-reviewer）
+    // 只读工具集：用于调研和审查类 Agent（researcher、code-reviewer）
     "description": "只读操作：代码库浏览、网络搜索和资源获取",
     "tools": [
       "codebase",    // 语义搜索代码库
@@ -14,7 +14,7 @@
   },
 
   "writer": {
-    // 写入工具集：用于内容撰写类 Agent（content-writer）
+    // 写入工具集：用于内容撰写类 Agent（dev）
     "description": "读写操作：在 readonly 基础上增加文件编辑能力",
     "tools": [
       "codebase",
