fix(ci): add missing link-check exclusions (wakatime, shields.io, hooj0.github.io, template placeholders)
Fixes GitHub Actions link-check failures caused by:
- wakatime.com links in component-guide.md (not rate-limit safe)
- shields.io badge URLs in team-playbook.md (dynamic badge links)
- hooj0.github.io/git-emoji-guide/ in team-playbook.md
- {owner}/{repo} placeholder URLs in team-playbook.md PowerShell examples

Co-authored-by: GitHub Copilot <copilot@github.com>

--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -42,6 +42,11 @@ jobs:
             --exclude "code.visualstudio.com/docs"
             --exclude "docs.github.com"
             --exclude "linkedin.com"
+            --exclude "wakatime.com"
+            --exclude "hooj0.github.io"
+            --exclude "shields.io"
+            --exclude "\{owner\}"
+            --exclude "\{repo\}"
             --exclude-path "claude-code-handbook.md"
             --exclude-path "ClaudeCode最佳实践.md"
             --exclude-path "ClaudeCode用法介绍.md"
