--- a/.markdownlint.jsonc
+++ b/.markdownlint.jsonc
@@ -23,6 +23,18 @@
   // MD040: Fenced code language — 关闭（大量通用模板/示例代码块无法标注语言）
   "MD040": false,
 
+  // MD022: Blanks around headings — 关闭（紧凑排版是本项目文档的既定风格）
+  "MD022": false,
+
+  // MD028: Blank line inside blockquote — 关闭（会议纪要/决策文档大量使用连续引用块）
+  "MD028": false,
+
+  // MD031: Blanks around fenced code blocks — 关闭（列表内嵌代码块无需额外空行）
+  "MD031": false,
+
+  // MD032: Blanks around lists — 关闭（紧凑信息密度是本项目文档的核心风格）
+  "MD032": false,
+
   // MD060: Table column style — 关闭（紧凑表格是本项目大量文档的既定风格）
   "MD060": false
 }
